--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,7 @@
 @import url('../blocks/root/root.css');
 
 @import url('../blocks/page/page.css');
+@import url('../blocks/page/header/page__header.css');
+
+@import url('../blocks/header/header.css');
+@import url('../blocks/header/__logo/header__logo.css');
