--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,8 +1,11 @@
 .header__logo {
-  max-height: 33px;
-  transition: opacity ease .3s;
+  width: calc((100vw - 320px) / (1280 - 320) * (142 - 103.7) + 103.7px);
+  padding-left: calc((100vw - 320px) / (1280 - 320) * (0 - 27) + 27px);
 }
 
-.header__logo:hover {
-  opacity: .8;
+@media screen and (min-width: 1280px) {
+  .header__logo {
+    width: 142px;
+    padding-left: 0;
+  }
 }
