--- a/pages/index.css
+++ b/pages/index.css
@@ -8,4 +8,5 @@
 @import url('../blocks/page/header/page__header.css');
 
 @import url('../blocks/header/header.css');
+@import url('../blocks/header/__link/header__link.css');
 @import url('../blocks/header/__logo/header__logo.css');
