--- a/pages/index.css
+++ b/pages/index.css
@@ -5,8 +5,9 @@
 @import url('../blocks/root/root.css');
 
 @import url('../blocks/page/page.css');
-@import url('../blocks/page/header/page__header.css');
-@import url('../blocks/page/profile/page__profile.css');
+@import url('../blocks/page/__header/page__header.css');
+@import url('../blocks/page/__profile/page__profile.css');
+@import url('../blocks/page/__elements/page__elements.css');
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__link/header__link.css');
@@ -21,3 +22,14 @@
 @import url('../blocks/profile/__button/profile__button.css');
 @import url('../blocks/profile/__button/_action/profile__button_action_edit.css');
 @import url('../blocks/profile/__button/_action/profile__button_action_add.css');
+
+
+@import url('../blocks/elements/elements.css');
+@import url('../blocks/elements/__grid/elements__grid.css');
+
+@import url('../blocks/element/element.css');
+@import url('../blocks/element/__figure/element__figure.css');
+@import url('../blocks/element/__img/element__img.css');
+@import url('../blocks/element/__caption/element__caption.css');
+@import url('../blocks/element/__heading/element__heading.css');
+@import url('../blocks/element/__like/element__like.css');
