--- a/blocks/element/__heading/element__heading.css
+++ b/blocks/element/__heading/element__heading.css
@@ -3,6 +3,7 @@
   font-size: 24px;
   line-height: 29px;
   color: #000;
+  font-weight: 900;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
