--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url('../blocks/page/__header/page__header.css');
 @import url('../blocks/page/__profile/page__profile.css');
 @import url('../blocks/page/__elements/page__elements.css');
+@import url('../blocks/page/__footer/page__footer.css');
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__link/header__link.css');
@@ -33,3 +34,6 @@
 @import url('../blocks/element/__caption/element__caption.css');
 @import url('../blocks/element/__heading/element__heading.css');
 @import url('../blocks/element/__like/element__like.css');
+
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
