--- a/blocks/button/_action/button_action_add.css
+++ b/blocks/button/_action/button_action_add.css
@@ -1,9 +1,9 @@
-.profile__button_action_add {
+.button_action_add {
   width: 150px;
   height: 50px;
   border: 2px solid #fff;
   border-radius: 2px;
-  background-image: url('../../../../images/profile/__button/_action/profile__button_action_add.svg');
+  background-image: url('../../../images/button/__action/button_action_add.svg');
   background-repeat: no-repeat;
   background-size: calc((100vw - 320px) / (1280 - 320) * (22 - 16) + 16px);
   background-position: center;
@@ -11,13 +11,13 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .profile__button_action_add {
+  .button_action_add {
     width: 100%;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .profile__button_action_add {
+  .button_action_add {
     background-size: 22px;
   }
 }
