--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,9 +1,9 @@
-.profile__button {
+.button {
   box-sizing: border-box;
   transition: opacity ease .3s;
 }
 
-.profile__button:hover {
+.button:hover {
   cursor: pointer;
-  opacity: .8;
+  opacity: .6;
 }
