--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,12 @@
 @import url('../blocks/page/__profile/page__profile.css');
 @import url('../blocks/page/__elements/page__elements.css');
 @import url('../blocks/page/__footer/page__footer.css');
+@import url('../blocks/page/__popup/page__popup.css');
+
+@import url('../blocks/button/button.css');
+@import url('../blocks/button/_action/button_action_edit.css');
+@import url('../blocks/button/_action/button_action_add.css');
+@import url('../blocks/button/_action/button_action_close.css');
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__link/header__link.css');
@@ -20,9 +26,6 @@
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__name/profile__name.css');
 @import url('../blocks/profile/__job/profile__job.css');
-@import url('../blocks/profile/__button/profile__button.css');
-@import url('../blocks/profile/__button/_action/profile__button_action_edit.css');
-@import url('../blocks/profile/__button/_action/profile__button_action_add.css');
 
 
 @import url('../blocks/elements/elements.css');
@@ -37,3 +40,12 @@
 
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
+
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__heading/popup__heading.css');
+@import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_field/popup__input_field_name.css');
+@import url('../blocks/popup/__input/_field/popup__input_field_job.css');
+@import url('../blocks/popup/__button/popup__button.css');
