--- a/blocks/elements/__grid/elements__grid.css
+++ b/blocks/elements/__grid/elements__grid.css
@@ -2,7 +2,7 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   justify-content: center;
   column-gap: 17px;
   row-gap: 20px;
