--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -3,6 +3,9 @@
   font-size: calc((100vw - 320px) / (1280 - 320) * (18 - 14) + 14px);
   line-height: calc((100vw - 320px) / (1280 - 320) * (22 - 17) + 17px);
   font-weight: normal;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: 1280px) {
