--- a/blocks/button/_action/button_action_add.css
+++ b/blocks/button/_action/button_action_add.css
@@ -7,17 +7,19 @@
   background-repeat: no-repeat;
   background-size: calc((100vw - 320px) / (1280 - 320) * (22 - 16) + 16px);
   background-position: center;
-  justify-self: center;
-}
-
-@media screen and (max-width: 1024px) {
-  .button_action_add {
-    width: 100%;
-  }
+  align-self: center;
+  grid-area: button_action_add;
 }
 
 @media screen and (min-width: 1280px) {
   .button_action_add {
     background-size: 22px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .button_action_add {
+    width: 100%;
+    margin-top: 36px;
   }
 }
