--- a/blocks/button/_action/button_action_edit.css
+++ b/blocks/button/_action/button_action_edit.css
@@ -7,7 +7,9 @@
   background-repeat: no-repeat;
   background-size: calc((100vw - 320px) / (1280 - 320) * (10 - 7.5) + 7.5px);
   background-position: center;
-  align-self: center;
+  align-self: end;
+  grid-area: button_action_edit;
+  margin-bottom: 7px;
 }
 
 @media screen and (min-width: 1280px) {
