--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,22 +1,41 @@
 .profile {
   display: grid;
-  align-items: center;
-  grid-template-columns: 1fr max-content;
+  /* align-items: center; */
+  grid-template-columns: min-content max-content 1fr min-content;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+  "profile__avatar profile__name button_action_edit button_action_add"
+  "profile__avatar profile__job . button_action_add";
+
   box-sizing: border-box;
   padding: 0 calc((100vw - 320px) / (1280 - 320) * (0 - 19) + 19px) 0 calc((100vw - 320px) / (1280 - 320) * (0 - 19) + 19px);
-}
-
-@media screen and (max-width: 1024px) {
-  .profile {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, max-content);
-    gap: 33px;
-    justify-items: center;
-  }
 }
 
 @media screen and (min-width: 1280px) {
   .profile {
     padding: 0;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .profile {
+    grid-template-columns: min-content max-content 1fr;
+    grid-template-rows: 1fr 1fr min-content;
+    grid-template-areas:
+    "profile__avatar profile__name button_action_edit"
+    "profile__avatar profile__job ."
+    "button_action_add button_action_add button_action_add";
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .profile {
+    grid-template-columns: 1fr min-content 1fr;
+    grid-template-rows: min-content min-content min-content min-content;
+    grid-template-areas:
+    "profile__avatar profile__avatar profile__avatar"
+    ". profile__name button_action_edit"
+    "profile__job profile__job profile__job"
+    "button_action_add button_action_add button_action_add";
   }
 }
