изменить отступы для соответствия pixel perfect

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,5 +1,5 @@
 .element__like {
-  margin-left: 40px;
+  margin-bottom: 3px;
   width: 21px;
   height: 19px;
   background-image: url('../../../images/elements/__element/elements__element_like_disabled.svg');
