--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,14 @@
 .popup {
   display: none;
   background-color: rgba(0, 0, 0, .5);
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
