--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,10 @@
 .popup {
   display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, .5);
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-weight: 400;
