--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   min-height: calc((100vw - 320px) / (1280 - 320) * (74 - 56) + 56px);
   box-sizing: border-box;
-  border-bottom: solid 1px #545454;
+  border-bottom: solid 1px rgba(84, 84, 84, .7);
 }
 
 @media screen and (min-width: 1280px) {
