--- a/blocks/element/__caption/element__caption.css
+++ b/blocks/element/__caption/element__caption.css
@@ -1,5 +1,5 @@
 .element__caption {
-  margin: 22px 19px 0 21px;
+  padding: 22px 19px 25px 21px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
