--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,13 +1,12 @@
 .popup__input {
   width: 100%;
   height: 41px;
-  margin: 0 0 16px;
-  padding: 13px 0 13px;
+  margin: 0;
+  padding: 13px 0 6px;
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-}
-
-.popup__input:last-child {
-  margin: 0;
+  font-size: 14px;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+  font-weight: 400;
 }
