--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,8 +1,8 @@
 .popup__input {
   width: 100%;
-  height: 41px;
+  /* height: 41px; */
   margin: 0;
-  padding: 13px 0 6px;
+  padding: 13px 0 9px;
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
