--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,6 @@
 .popup__input {
   width: 100%;
-  margin: 0;
+  margin: 0 0 18px;
   padding: 13px 0 9px;
   box-sizing: border-box;
   border: none;
@@ -8,4 +8,8 @@
   font-size: 14px;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-weight: 400;
+}
+
+.popup__input:last-of-type {
+  margin: 0 0 48px;
 }
