--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,14 @@
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__button/_action/popup__button_action_close.css');
 @import url('../blocks/popup/__button/_action/popup__button_action_submit.css');
+
+@import url('../blocks/popup-add-card/popup-add-card.css');
+@import url('../blocks/popup-add-card/_opened/popup-add-card_opened.css');
+@import url('../blocks/popup-add-card/__container/popup-add-card__container.css');
+@import url('../blocks/popup-add-card/__heading/popup-add-card__heading.css');
+@import url('../blocks/popup-add-card/__input/popup-add-card__input.css');
+@import url('../blocks/popup-add-card/__input/_field/popup-add-card__input_field_name.css');
+@import url('../blocks/popup-add-card/__input/_field/popup-add-card__input_field_link.css');
+@import url('../blocks/popup-add-card/__button/popup-add-card__button.css');
+@import url('../blocks/popup-add-card/__button/_action/popup-add-card__button_action_close.css');
+@import url('../blocks/popup-add-card/__button/_action/popup-add-card__button_action_submit.css');
