--- a/pages/index.css
+++ b/pages/index.css
@@ -34,6 +34,8 @@
 @import url('../blocks/element/__caption/element__caption.css');
 @import url('../blocks/element/__heading/element__heading.css');
 @import url('../blocks/element/__like/element__like.css');
+@import url('../blocks/element/__like/_active/element__like_active.css');
+@import url('../blocks/element/__button/element__button.css');
 
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
@@ -59,3 +61,11 @@
 @import url('../blocks/popup-add-card/__button/popup-add-card__button.css');
 @import url('../blocks/popup-add-card/__button/_action/popup-add-card__button_action_close.css');
 @import url('../blocks/popup-add-card/__button/_action/popup-add-card__button_action_submit.css');
+
+@import url('../blocks/popup-image/popup-image.css');
+@import url('../blocks/popup-image/_opened/popup-image_opened.css');
+@import url('../blocks/popup-image/__container/popup-image__container.css');
+@import url('../blocks/popup-image/__img/popup-image__img.css');
+@import url('../blocks/popup-image/__button/popup-image__button.css');
+@import url('../blocks/popup-image/__button/_action/popup-image__button_action_close.css');
+@import url('../blocks/popup-image/__heading/popup-image__heading.css');
