--- a/blocks/popup-add-card/_opened/popup-add-card_opened.css
+++ b/blocks/popup-add-card/_opened/popup-add-card_opened.css
@@ -1,5 +1,5 @@
 .popup-add-card_opened {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  visibility: visible;
+  opacity: 1;
 }
