--- a/blocks/popup-image/_opened/popup-image_opened.css
+++ b/blocks/popup-image/_opened/popup-image_opened.css
@@ -1,5 +1,5 @@
 .popup-image_opened {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  visibility: visible;
+  opacity: 1;
 }
