рефакторинг блоков popup по БЭМ

--- a/blocks/popup/__container/_entity/popup__container_entity_image.css
+++ b/blocks/popup/__container/_entity/popup__container_entity_image.css
@@ -1,5 +1,4 @@
-.popup-image__container {
-  position: fixed;
+.popup__container_entity_image {
   display: flex;
   justify-content: center;
   align-items: center;
