--- a/blocks/popup/__heading/_entity/popup__heading_entity_form.css
+++ b/blocks/popup/__heading/_entity/popup__heading_entity_form.css
@@ -1,13 +1,11 @@
-.popup-add-card__heading {
+.popup__heading_entity_form {
   margin: 0 0 calc((100vw - 320px) / (1280 - 320) * (36 - 61) + 61px);
   font-size: calc((100vw - 320px) / (1280 - 320) * (24 - 18) + 18px);
   line-height: calc((100vw - 320px) / (1280 - 320) * (29 - 22) + 22px);
-  font-weight: 900;
-  color: #000;
 }
 
 @media screen and (min-width: 1280px) {
-  .popup-add-card__heading {
+  .popup__heading_entity_form {
     margin: 0 0 36px;
     font-size: 24px;
     line-height: 29px;
