--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,15 +1,10 @@
 .popup__heading {
-  margin: 0 0 calc((100vw - 320px) / (1280 - 320) * (36 - 61) + 61px);
-  font-size: calc((100vw - 320px) / (1280 - 320) * (24 - 18) + 18px);
-  line-height: calc((100vw - 320px) / (1280 - 320) * (29 - 22) + 22px);
+  margin: 0;
+  font-size: 12px;
+  line-height: 15px;
   font-weight: 900;
   color: #000;
-}
-
-@media screen and (min-width: 1280px) {
-  .popup__heading {
-    margin: 0 0 36px;
-    font-size: 24px;
-    line-height: 29px;
-  }
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
