--- a/blocks/popup/_feat/popup_feat_image-fullsize.css
+++ b/blocks/popup/_feat/popup_feat_image-fullsize.css
@@ -1,4 +1,4 @@
-.popup-image {
+.popup_feat_image-fullsize {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +8,6 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, .5);
-
   visibility: hidden;
   opacity: 0;
   transition: visibility .5s ease, opacity .5s ease;
