--- a/blocks/element/__delete/element__delete.css
+++ b/blocks/element/__delete/element__delete.css
@@ -1,4 +1,4 @@
-.element__button {
+.element__delete {
   position: absolute;
   top: 18px;
   right: 15px;
@@ -10,10 +10,11 @@
   background-position: center;
   transition: all ease .3s;
   border: none;
+  outline: none;
   background-color: transparent;
 }
 
-.element__button:hover {
+.element__delete:hover {
   cursor: pointer;
   opacity: .6;
 }
