--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url('../blocks/page/__elements/page__elements.css');
 @import url('../blocks/page/__footer/page__footer.css');
 
+
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__link/header__link.css');
 @import url('../blocks/header/__logo/header__logo.css');
@@ -22,7 +23,6 @@
 @import url('../blocks/profile/__button/profile__button.css');
 @import url('../blocks/profile/__button/_action/profile__button_action_edit.css');
 @import url('../blocks/profile/__button/_action/profile__button_action_add.css');
-
 
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/elements/__grid/elements__grid.css');
@@ -59,11 +59,17 @@
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_card-add.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_image-fullsize.css');
 
+@import url('../blocks/popup/__field/popup__field.css');
+
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__input/_field/popup__input_field_name.css');
 @import url('../blocks/popup/__input/_field/popup__input_field_job.css');
 @import url('../blocks/popup/__input/_field/popup__input_field_place.css');
 @import url('../blocks/popup/__input/_field/popup__input_field_link.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
+
+@import url('../blocks/popup/__input-error/popup__input-error.css');
+@import url('../blocks/popup/__input-error/_active/popup__input-error_active.css');
 
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__button/_action/popup__button_action_close.css');
@@ -71,3 +77,4 @@
 @import url('../blocks/popup/__button/_position/popup__button_position_profile-edit-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_card-add-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_image-fullsize-close.css');
+@import url('../blocks/popup/__button/_disabled/popup__button_disabled.css');
