--- a/blocks/elements/__grid/elements__grid.css
+++ b/blocks/elements/__grid/elements__grid.css
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   justify-content: center;
-  column-gap: 17px;
+  -moz-column-gap: 17px;
+       column-gap: 17px;
   row-gap: 20px;
 }
