--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -31,7 +31,9 @@
 @import url('../blocks/element/__caption/element__caption.css');
 @import url('../blocks/element/__heading/element__heading.css');
 @import url('../blocks/element/__like/element__like.css');
+@import url('../blocks/element/__like-container/element__like-container.css');
 @import url('../blocks/element/__like/_active/element__like_active.css');
+@import url('../blocks/element/__like-number/element__like-number.css');
 @import url('../blocks/element/__delete/element__delete.css');
 
 @import url('../blocks/footer/footer.css');
