--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -48,6 +48,7 @@
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__container/_feat/popup__container_feat_profile-edit.css');
 @import url('../blocks/popup/__container/_feat/popup__container_feat_card-add.css');
+@import url('../blocks/popup/__container/_feat/popup__container_feat_card-delete.css');
 @import url('../blocks/popup/__container/_feat/popup__container_feat_image-fullsize.css');
 
 @import url('../blocks/popup/__image-fullsize/popup__image-fullsize.css');
@@ -55,6 +56,7 @@
 @import url('../blocks/popup/__heading/popup__heading.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_profile-edit.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_card-add.css');
+@import url('../blocks/popup/__heading/_feat/popup__heading_feat_card-delete.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_image-fullsize.css');
 
 @import url('../blocks/popup/__field/popup__field.css');
@@ -73,5 +75,6 @@
 @import url('../blocks/popup/__button/_action/popup__button_action_submit.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_profile-edit-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_card-add-close.css');
+@import url('../blocks/popup/__button/_position/popup__button_position_card-delete-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_image-fullsize-close.css');
 @import url('../blocks/popup/__button/_disabled/popup__button_disabled.css');
