сверсать попап для обновления аватара

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -48,6 +48,7 @@
 @import url('../blocks/popup/_opened/popup_opened.css');
 
 @import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__container/_feat/popup__container_feat_avatar-update.css');
 @import url('../blocks/popup/__container/_feat/popup__container_feat_profile-edit.css');
 @import url('../blocks/popup/__container/_feat/popup__container_feat_card-add.css');
 @import url('../blocks/popup/__container/_feat/popup__container_feat_card-delete.css');
@@ -56,6 +57,7 @@
 @import url('../blocks/popup/__image-fullsize/popup__image-fullsize.css');
 
 @import url('../blocks/popup/__heading/popup__heading.css');
+@import url('../blocks/popup/__heading/_feat/popup__heading_feat_avatar-update.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_profile-edit.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_card-add.css');
 @import url('../blocks/popup/__heading/_feat/popup__heading_feat_card-delete.css');
@@ -75,6 +77,7 @@
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__button/_action/popup__button_action_close.css');
 @import url('../blocks/popup/__button/_action/popup__button_action_submit.css');
+@import url('../blocks/popup/__button/_position/popup__button_position_avatar-update-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_profile-edit-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_card-add-close.css');
 @import url('../blocks/popup/__button/_position/popup__button_position_card-delete-close.css');
