--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   box-sizing: border-box;
-  border-bottom: solid 1px rgba(84, 84, 84, .7);
+  border-bottom: solid 1px rgba(84, 84, 84, 0.7);
   padding-bottom: calc((100vw - 320px) / (1280 - 320) * (37 - 27.6) + 27.6px);
 }
 
