--- a/src/blocks/page/__header/page__header.css
+++ b/src/blocks/page/__header/page__header.css
@@ -1,7 +1,8 @@
 /* определение внешней геометрии и положения блока header */
 .page__header {
   width: calc((100vw - 320px) / (1280 - 320) * (880 - 320) + 320px);
-  margin: calc((100vw - 320px) / (1280 - 320) * (45 - 28) + 28px) auto calc((100vw - 320px) / (1280 - 320) * (40 - 42) + 42px);
+  margin: calc((100vw - 320px) / (1280 - 320) * (45 - 28) + 28px) auto
+    calc((100vw - 320px) / (1280 - 320) * (40 - 42) + 42px);
 }
 
 @media screen and (min-width: 1280px) {
