--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  transition: all ease .3s;
+  transition: all ease 0.3s;
   border: none;
   outline: none;
   background-color: transparent;
@@ -16,5 +16,5 @@
 
 .element__delete:hover {
   cursor: pointer;
-  opacity: .6;
+  opacity: 0.6;
 }
