--- a/src/blocks/popup/__button/_action/popup__button_action_submit.css
+++ b/src/blocks/popup/__button/_action/popup__button_action_submit.css
@@ -8,11 +8,11 @@
   border: none;
   font-size: calc((100vw - 320px) / (1280 - 320) * (18 - 14) + 14px);
   line-height: calc((100vw - 320px) / (1280 - 320) * (22 - 17) + 17px);
-  transition: opacity ease .3s;
+  transition: opacity ease 0.3s;
 }
 
 .popup__button_action_submit:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 1280px) {
