--- a/src/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/src/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,6 +1,6 @@
 .popup__button_disabled {
   color: #000;
-  opacity: .2;
+  opacity: 0.2;
   background-color: #fff;
   border: 1px solid #000;
   pointer-events: none;
