--- a/src/blocks/popup/__button/_position/popup__button_position_profile-edit-close.css
+++ b/src/blocks/popup/__button/_position/popup__button_position_profile-edit-close.css
@@ -1,5 +1,8 @@
 .popup__button_position_profile-edit-close {
-  top: calc(-1 * calc((100vw - 320px) / (1280 - 320) * (32 - 20) + 20px) + calc((100vw - 320px) / (1280 - 320) * (-4 + 22) - 22px));
+  top: calc(
+    -1 * calc((100vw - 320px) / (1280 - 320) * (32 - 20) + 20px) + calc((100vw - 320px) /
+          (1280 - 320) * (-4 + 22) - 22px)
+  );
   left: calc((100vw - 320px) / (1280 - 320) * (434 - 254) + 254px);
 }
 
