--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -4,7 +4,7 @@
   padding: 13px 0 9px;
   box-sizing: border-box;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-weight: 400;
