--- a/src/blocks/popup/_feat/popup_feat_image-fullsize.css
+++ b/src/blocks/popup/_feat/popup_feat_image-fullsize.css
@@ -7,8 +7,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   visibility: hidden;
   opacity: 0;
-  transition: visibility .5s ease, opacity .5s ease;
+  transition: visibility 0.5s ease, opacity 0.5s ease;
 }
